[package]
name = "fambox"
version = "0.1.2" # when releasing, update version number and changelog
edition = "2021"
authors = ["Easyoakland"]
description = "FamBox data structure for ergonomically and safely using c's flexible array members"
documentation = "https://docs.rs/fambox/"
# rust-version - The minimal supported Rust version.
readme = "README.md"
# homepage - URL of the package homepage.
repository = "https://github.com/Easyoakland/fambox"
license = "MIT OR Apache-2.0"
keywords = ["flexarray", "bindgen", "c", "fam", "ffi"]
categories = ["api-bindings", "development-tools::ffi", "no-std"] # TODO alloc feature then change no-std category to "no-std::no-alloc"
build = "build.rs"
include = [
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "src/**/*",
  "build.rs"
]

[package.metadata.docs.rs]
features = ["serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1.3.3", default-features = false }
fambox = { path = ".", features = ["serde"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }

[build-dependencies]
version_check = "0.9.4"

[features]
default = ["alloc"]
serde = ["dep:serde"]
alloc = [] # TODO